# autocrop

./: .gitignore  .sourcery.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  autocrop_rs.pyi  build.rs  changelog.md  cropper.py  custom_widgets.py  files.py  main.py  mainwindow.py  mainwindowOLD.py  pyproject.toml  requirements.txt  resources_rc.py  settings.json  settings.py  utils.py  ux.py  videoOLD.py
.github/workflows/: ci.yml
core/: __init__.py  colour_utils.py  config.py  crop_instruction.py  cropper.py  cropper_folder.py  cropper_mapping.py  cropper_photo.py  cropper_video.py  custom_dial_widget.py  data_fame_model.py  data_model.py  dialog.py  ext_widget.py  face_tools.py  face_worker.py  ffmpeg_utils.py  image_loader.py  image_protocol.py  image_protocols.py  image_widget.py  job.py  mainwindow.py  memory_utils.py  operation_types.py  processing.py  resource_path.py  utils.py  window_functions.py
core/croppers/: __init__.py  base.py  batch.py  batch_cropper.py  cropper.py  cropper_folder.py  cropper_mapping.py  cropper_photo.py  cropper_video.py  display.py  display_crop_utils.py  folder.py  folder_cropper.py  mapping.py  mapping_cropper.py  photo.py  photo_cropper.py  video.py  video_cropper.py
core/custom_widgets/: __init__.py  animated_button.py  custom_line_edit.py  data_fame_model.py  dialog.py  image_widget.py  line_edit_state.py  number_line_edit.py  path_line_edit.py  path_type.py
core/custom_widgets/line_edits/: __init__.py  custom_line_edit.py  path_line_edit.py
core/custom_widgets/main_objects/: __init__.py  crop_folder_widget.py  crop_map_widget.py  crop_photo_widget.py  crop_vid_widget.py  custom_crop_widget.py  custom_dial_widget.py  ext_widget.py  f_type_photo.py  f_type_table.py  f_type_video.py  face_worker.py  job.py  main_window.py  utils.py  window_functions.py
core/custom_widgets/main_objects/enums/: terminator.py
core/enums/: __init__.py  function_tab_selection.py  function_type.py  gui_icon.py  presets.py  resource_path.py
core/file_types/: __init__.py  media_state.py  photo.py  video.py
core/literals/: __init__.py  file_extensions.py  media_icon_alias.py  process_icon_alias.py  tab_icon_alias.py
core/protocols/: __init__.py  image_loader.py  image_opener.py  image_writer.py  table_loader.py
examples/: attribution.md
file_types/: __init__.py  file.py  file_category.py  file_type_manager.py  photo.py  register.py  registry.py  signature_checker.py  table.py  video.py
licenses/: LICENSE-3RD-PARTY.txt
line_edits/: __init__.py  custom_line_edit.py  file_path_validator.py  number_line_edit.py  path_line_edit.py
line_edits/enums/: __init__.py  line_edit_state.py  path_type.py
main_objects/: animated_button.py  crop_folder_widget.py  crop_map_widget.py  crop_photo_widget.py  crop_vid_widget.py  cropper.py  custom_crop_widget.py  custom_dial_widget.py  dialog.py  ext_widget.py  job.py  main_window.py  utils.py  window_functions.py
main_objects/enums/: __init__.py  function_type.py  media_state.py
main_widgets/: __init__.py  crop_batch_widget.py  crop_folder_widget.py  crop_map_widget.py  crop_photo_widget.py  crop_vid_widget.py  custom_crop_widget.py  display_crop_utils.py  display_cropper.py  function_tab_enum.py  main_window.py  splash_screen.py  ui_control_widget.py  ui_crop_batch_widget.py  ui_crop_folder_widget.py  ui_crop_map_widget.py  ui_crop_photo_widget.py  ui_crop_vid_widget.py  ui_crop_widget.py  ui_main_window.py  ui_media_control_widget.py  ui_splash_screen.py  widget_utils.py
main_widgets/enums/: __init__.py
resources/: border_style.css  models_and_weights.txt  resources.qrc  resources2.qrc
resources/forms/: about_form.ui  about_form2.ui  control_widget.ui  crop_folder_widget.ui  crop_map_widget.ui  crop_photo_widget.ui  crop_vid_widget.ui  custom_dial_widget.ui  ext_widget.ui  form.ui  form2.ui  form3.ui  media_control_widget.ui
src/: dispatch_simd.rs  face_detection.rs  file_signatures.rs  file_types.rs  image_processing.rs  lib.rs  module_builder.rs  security.rs
stubs/autocrop_rs/: __init__.pyi  face_detection.pyi  file_types.pyi  image_processing.pyi  security.pyi
stubs/rawpy/: __init__.pyi  _rawpy.pyi  enhance.pyi
tests/: test_autocrop.py
ui/: __init__.py  batch_tab.py  control_widget.py  crop_widget.py  dialog.py  display_cropper.py  folder_tab.py  image_hover_preview.py  image_widget.py  main_window.py  mapping_tab.py  media_controls.py  photo_tab.py  pulsing_indicator.py  splash_screen.py  svg_radio_button.py  svg_radio_button_group.py  tab_state.py  ui_utils.py  utils.py  video_tab.py
ui/components/: __init__.py  address_bar.py  drag_drop_handler.py  menu_manager.py  tab_manager.py
ui/enums/: __init__.py  button_types.py  function_tab_selection.py  gui_icon.py
