[package]
name = "autocrop_rs"
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "autocrop_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
numpy = "0.25.0"
rayon = "1.10.0"
phf = { version = "0.12.1", features = ["macros"] }
regex = { version = "1.11.1", features = ["unicode"] }
memmap2 = "0.9.7"
parking_lot = "0.12.4"
once_cell = "1.21.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[build-dependencies]
cc = "1.2.30"