[package]
name = "autocrop_rs"
version = "0.6.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "autocrop_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
numpy = "0.27.0"
rayon = "1.11.0"
phf = { version = "0.13.1", features = ["macros"] }
regex = { version = "1.12.2", features = ["unicode"] }
memmap2 = "0.9.9"
parking_lot = "0.12.5"
once_cell = "1.21.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[build-dependencies]
cc = "1.2.47"
