[build-system]
requires      = ["maturin>=1.9.6"]
build-backend = "maturin"

[project]
name            = "autocrop_rs"
version         = "0.6.3"
requires-python = ">=3.10"
dependencies    = [
  "cachetools>=6.2.1",
  "fastexcel>=0.16.0",
  "ffmpeg-python>=0.2.0",
  "numpy>=2.2.6",
  "opencv-contrib-python>=4.12.0.88",
  "polars>=1.34.0",
  "psutil>=7.1.2",
  "PyQt6>=6.9.1",
  "rawpy>=0.25.1",
  "tifffile>=2025.10.16",
]
classifiers   = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py313"
line-length    = 120
select         = ["E","W","F","I","UP"]

[tool.pyright]
include = ["**/*.py", "stubs"]
exclude = ["**/__pycache__"]
stubPath = "./stubs"
typeCheckingMode = "basic"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false