[build-system]
requires      = ["maturin>=1.10.2"]
build-backend = "maturin"

[project]
name            = "autocrop_rs"
version         = "0.6.4"
requires-python = ">=3.10"
dependencies    = [
  "cachetools>=6.2.2",
  "fastexcel>=0.18.0",
  "ffmpeg-python>=0.2.0",
  "numpy>=2.2.6",
  "opencv-contrib-python>=4.12.0.88",
  "polars>=1.35.2",
  "psutil>=7.1.3",
  "PyQt6>=6.10.0",
  "rawpy>=0.25.1",
  "tifffile>=2025.10.16",
]
classifiers   = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py313"
line-length    = 120
select         = ["E","W","F","I","UP"]

[tool.pyright]
include = ["**/*.py", "stubs"]
exclude = ["**/__pycache__"]
stubPath = "./stubs"
typeCheckingMode = "basic"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false